--- a/CSS_properties.html
+++ b/CSS_properties.html
@@ -1,6 +1,6 @@
 <html>
     <body style="background-color: #FF0000">
         <h1 style="font-family: Jokerman;line-height: 3px;color: aqua;background-color: aquamarine;text-align: center">HELLO</h1>
-        <h1 style="color: azure;background-color: blueviolet; font-family: Jokerman; font-size: 200%;font-style: italic; text-decoration: underline;text-transform: capitalize;text-align: center;text-shadow: 3px 4px grey;word-spacing: 2px;line-height: 6%;border-width: thick;border-color: black;border-style: double;">KEEP TRYING</h1>
+        <h1 style="color: azure;background-color: blueviolet; font-family: Jokerman; font-size: 200%;font-style: italic; text-decoration: overline;text-transform: capitalize;text-align: center;text-shadow: 3px 4px grey;word-spacing: 2px;line-height: 6%;border-width: thick;border-color: black;border-style: double;">KEEP TRYING</h1>
     </body>
 </html>
