--- a/Border_properties.html
+++ b/Border_properties.html
@@ -1,6 +1,6 @@
 <html>
-    <body style="border-style: groove; background-color: chocolate">
-        <h1 style="border-style: ridge; color: blue;background-color: aliceblue;text-shadow: 3px 6px grey"> Namaste</h1>
+    <body style="border: double 30px black; background-color: chocolate">
+        <h1 style="font-size: 1000%;border: ridge 30px black; color: blue;background-color: rgb(236, 236, 23);text-shadow: 15px 15px grey;text-align: center"> Namaste</h1>
         <p style="text-align: center;font-size: xx-large"> KEEP TRYING TO ACHIEVE SUCCESS</p>
     </body>
 </html>
